@@ -32,14 +32,34 @@
 #ifndef ROTTRIM_H
 #define ROTTRIM_H
 
-#include <rotor.h>
-#include <genel.h>
+#include "rotor.h"
+#include "genel.h"
 
-class RotorTrim : virtual public Elem, public Genel {
+/*
+	pRotor->iGetPrivDataIdx("Tz");
+	pRotor->iGetPrivDataIdx("Mx");
+	pRotor->iGetPrivDataIdx("My");
+	doublereal dRho = pRotor->dGetAirDensity(pRotor->GetXCurr());
+	doublereal dOmega = pRotor->dGetOmega();
+	doublereal dRadius = pRotor->dGetRadius();
+	doublereal dMu = pRotor->dGetMu();
+	doublereal dThrust = pRotor->dGetPrivData(iRotorTz)/d;
+	doublereal dRollMoment = pRotor->dGetPrivData(iRotorMx)/d;
+	doublereal dPitchMoment = pRotor->dGetPrivData(iRotorMy)/d;
+	pRotor->GetConnectedNodes(connectedNodes);
+
+	dThrust, dRollMoment, dPitchMoment // from drives?
+	dRho // from AirProperties
+	dOmega // from kinematics
+	dRadius // constant
+	dMu // from drive?
+ */
+
+class RotorTrimBase : virtual public Elem, public Genel {
 protected:
-	Rotor* pRotor;
+	doublereal dRadius;
 	ScalarDifferentialNode* pvNodes[3];
-	DriveOwner Thrust, RollMoment, PitchMoment;
+	DriveOwner DThrust, DRollMoment, DPitchMoment;
 	DriveOwner Trigger;
 	
 	doublereal dGamma;
@@ -53,33 +73,38 @@ protected:
 	doublereal dTau1;
 	doublereal dKappa0;
 	doublereal dKappa1;
-	
+
+protected:
+	virtual void
+	GetData(doublereal &dThrust,
+		doublereal &dRollMoment,
+		doublereal &dPitchMoment,
+		doublereal &dRho,
+		doublereal &dOmega,
+		doublereal &dMu) const = 0;
+
 public:
-	RotorTrim(unsigned int uL,
+	RotorTrimBase(unsigned int uL,
 		const DofOwner* pDO,
-		Rotor* pRot, 
 		ScalarDifferentialNode* pNode1,
 		ScalarDifferentialNode* pNode2,
 		ScalarDifferentialNode* pNode3,
-		DriveCaller* pDrive1,
-		DriveCaller* pDrive2,
-		DriveCaller* pDrive3,
+		const DriveCaller* pDThrust,
+		const DriveCaller* pDRollMoment,
+		const DriveCaller* pDPitchMoment,
 		const doublereal& dG,
 		const doublereal& dp,
 		const doublereal& dT0,
 		const doublereal& dT1,
 		const doublereal& dK0,
 		const doublereal& dK1,
-		DriveCaller *pTrigger,
+		const DriveCaller *pTrigger,
 		flag fOut);
 
-	virtual ~RotorTrim(void);
+	virtual ~RotorTrimBase(void);
 	
 	virtual unsigned int iGetNumDof(void) const;
 	
-	/* Scrive il contributo dell'elemento al file di restart */
-	virtual std::ostream& Restart(std::ostream& out) const;
-
 	/* Tipo di Genel */
 	virtual Genel::Type GetGenelType(void) const { 
 		return Genel::ROTORTRIM; 
@@ -109,16 +134,102 @@ public:
 	 * utile per l'assemblaggio della matrice di connessione fra i dofs
 	 */
 	virtual void
-	GetConnectedNodes(std::vector<const Node *>& connectedNodes) const {
-		pRotor->GetConnectedNodes(connectedNodes);
-		int NumNodes = connectedNodes.size();
-		connectedNodes.resize(NumNodes + 3);
-		for (int i = 0; i < 3; i++) {
-			connectedNodes[NumNodes + i] = pvNodes[i];
-		}
-	};
+	GetConnectedNodes(std::vector<const Node *>& connectedNodes) const;
 	/* ************************************************ */
 };
 
-#endif /* ROTTRIM_H */
+class RotorTrim : virtual public Elem, public RotorTrimBase {
+protected:
+	const Rotor* pRotor;
+
+	virtual void
+	GetData(doublereal &dThrust,
+		doublereal &dRollMoment,
+		doublereal &dPitchMoment,
+		doublereal &dRho,
+		doublereal &dOmega,
+		doublereal &dMu) const;
+
+public:
+	RotorTrim(unsigned int uL,
+		const DofOwner* pDO,
+		const Rotor* pRot, 
+		ScalarDifferentialNode* pNode1,
+		ScalarDifferentialNode* pNode2,
+		ScalarDifferentialNode* pNode3,
+		const DriveCaller* pDThrust,
+		const DriveCaller* pDRollMoment,
+		const DriveCaller* pDPitchMoment,
+		const doublereal& dG,
+		const doublereal& dp,
+		const doublereal& dT0,
+		const doublereal& dT1,
+		const doublereal& dK0,
+		const doublereal& dK1,
+		const DriveCaller *pTrigger,
+		flag fOut);
+
+	virtual ~RotorTrim(void);
+	
+	/* Scrive il contributo dell'elemento al file di restart */
+	virtual std::ostream& Restart(std::ostream& out) const;
+
+ 	/* *******PER IL SOLUTORE PARALLELO******** */        
+   	/*
+	 * Fornisce il tipo e la label dei nodi che sono connessi all'elemento
+	 * utile per l'assemblaggio della matrice di connessione fra i dofs
+	 */
+	virtual void
+	GetConnectedNodes(std::vector<const Node *>& connectedNodes) const;
+	/* ************************************************ */
+};
+
+class RotorTrimGeneric : virtual public Elem, public RotorTrimBase {
+protected:
+	const StructNode *pStrNode;
+	DriveOwner Thrust, RollMoment, PitchMoment;
+	const AirProperties *pAP;
+	DriveOwner Omega, Mu;
+
+	virtual void
+	GetData(doublereal &dThrust,
+		doublereal &dRollMoment,
+		doublereal &dPitchMoment,
+		doublereal &dRho,
+		doublereal &dOmega,
+		doublereal &dMu) const;
+
+public:
+	RotorTrimGeneric(unsigned int uL,
+		const DofOwner* pDO,
+		const StructNode *pStrNode,
+		const DriveCaller *pThrust,
+		const DriveCaller *pRollMoment,
+		const DriveCaller *pPitchMoment,
+		const AirProperties *pAP,
+		doublereal dRadius,
+		const DriveCaller *pOmega,
+		const DriveCaller *pMu,
+		ScalarDifferentialNode* pNode1,
+		ScalarDifferentialNode* pNode2,
+		ScalarDifferentialNode* pNode3,
+		const DriveCaller* pDThrust,
+		const DriveCaller* pDRollMoment,
+		const DriveCaller* pDPitchMoment,
+		const doublereal& dG,
+		const doublereal& dp,
+		const doublereal& dT0,
+		const doublereal& dT1,
+		const doublereal& dK0,
+		const doublereal& dK1,
+		const DriveCaller *pTrigger,
+		flag fOut);
+
+	virtual ~RotorTrimGeneric(void);
+	
+	/* Scrive il contributo dell'elemento al file di restart */
+	virtual std::ostream& Restart(std::ostream& out) const;
+};
+
+#endif // ROTTRIM_H
 
